Add Gatekeeper documentation
This strives to create a maintainable Gatekeeper
operator doc, conditionally rendering portions
of the doc based on its version attribute.

ref: https://issues.redhat.com/browse/ACM-10570
Signed-off-by: Dale Haiducek <19750917+dhaiducek@users.noreply.github.com>

--- a/governance/main.adoc
+++ b/governance/main.adoc
@@ -30,6 +30,7 @@ include::etcd_encryption_policy.adoc[leveloffset=+3]
 include::compliance_operator_policy.adoc[leveloffset=+3]
 include::e8_scan_policy.adoc[leveloffset=+3]
 include::ocp_cis_policy.adoc[leveloffset=+3]
+include::gatekeeper_install_policy.adoc[leveloffset=+2]
 include::image_vuln_policy.adoc[leveloffset=+3]
 include::opp_policyset.adoc[leveloffset=+3]
 include::manage_dashboard.adoc[leveloffset=+2]
@@ -44,10 +45,10 @@ include::opp_policyset_install.adoc[leveloffset=+3]
 include::install_operator.adoc[leveloffset=+3]
 include::policy_dependencies.adoc[leveloffset=+2]
 include::secure_rhacm.adoc[leveloffset=+2]
-include::gatekeeper_operator_intro.adoc[leveloffset=+1]
-include::gatekeeper_policy_constraints.adoc[leveloffset=+2]
-include::create_gatekeeper.adoc[leveloffset=+2]
+include::gatekeeper/gatekeeper_operator_intro.adoc[leveloffset=+1]
+include::gatekeeper/gatekeeper_operator_3.11.adoc[leveloffset=+2]
+include::gatekeeper/gatekeeper_operator_3.14.adoc[leveloffset=+2]
 include::third_party_policy_intro.adoc[leveloffset=+1]
 include::policy_generator.adoc[leveloffset=+2]
+include::gatekeeper_policy_constraints.adoc[leveloffset=+2]
 include::generate_pol_operator_install.adoc[leveloffset=+2]
-
