--- a/governance/third_party_policy_intro.adoc
+++ b/governance/third_party_policy_intro.adoc
@@ -7,7 +7,5 @@ You can also use the third-party party policies from the link:https://github.com
 
 Learn to integrate the following third-party policies:
 
-* xref:../governance/gatekeeper_operator_intro.adoc#gatekeeper-operator-intro[Gatekeeper operator]
+* xref:../governance/gatekeeper/gatekeeper_operator_intro.adoc#gatekeeper-operator-intro[{gk-operator}]
 * xref:../governance/policy_generator.adoc#policy-generator[Policy Generator]
-
-
