--- a/modules/common-attributes.adoc
+++ b/modules/common-attributes.adoc
@@ -4,7 +4,10 @@
 :assist-install: Infrastructure Operator for Red Hat OpenShift
 :cincinnati: Red Hat OpenShift Update Service
 :cincinnati-short: OpenShift Update Service
-:global-hub: multicluster global hub 
+:gk-latest: 3.14
+:gk-latest-tag: 3_14
+:gk-operator: Gatekeeper operator
+:global-hub: multicluster global hub
 :mce: multicluster engine for Kubernetes operator
 :mce-short: multicluster engine operator
 :ocp: Red Hat OpenShift Container Platform
