--- a/governance/supported_policies.adoc
+++ b/governance/supported_policies.adoc
@@ -75,6 +75,8 @@ View the following policy documentation to learn how policies are applied:
 * xref:../governance/e8_scan_policy.adoc#e8-scan-policy[E8 scan policy]
 * xref:../governance/ocp_cis_policy.adoc#ocp-cis-policy[OpenShift CIS scan policy]
 * xref:../governance/image_vuln_policy.adoc#image-vulnerability-policy-sample[Image vulnerability policy]
+* xref:../governance/gatekeeper_install_policy.adoc[Gatekeeper operator policy]
+* xref:../governance/gatekeeper_policy_constraints.adoc[Gatekeeper constraint policy]
 * xref:../governance/opp_policyset.adoc#opp-policy-set[Red Hat OpenShift Platform Plus policy set]
 
 Refer to xref:../governance/grc_intro.adoc#governance[Governance] for more topics.
