--- a/governance/supported_policies.adoc
+++ b/governance/supported_policies.adoc
@@ -49,7 +49,7 @@ Role binding policy
 | Image vulnerability policy
 | Deploy the Container Security Operator and detect known image vulnerabilities in pods running on the cluster. See the link:https://github.com/quay/container-security-operator#readme[Container Security Operator] GitHub repository.
 
-| Gatekeeper operator deployment
+| {gk-operator} deployment
 | Gatekeeper is an admission webhook that enforces custom resource definition-based policies that are run by the Open Policy Agent (OPA) policy engine. See the link:https://open-policy-agent.github.io/gatekeeper/website/docs/[Gatekeeper] documentation.
 
 | Gatekeeper compliance policy
