Fix broken links
Signed-off-by: Dale Haiducek <19750917+dhaiducek@users.noreply.github.com>

--- a/clusters/cluster_lifecycle/remove_managed_cluster.adoc
+++ b/clusters/cluster_lifecycle/remove_managed_cluster.adoc
@@ -152,4 +152,4 @@ sh-4.4#etcdctl compact $(etcdctl endpoint status --write-out="json" |  egrep -o 
 $ compacted revision 158774421
 ----
 
-. Defragment the `etcd` database and clear any `NOSPACE` alarms as outlined in link:https://docs.openshift.com/container-platform/latest/scalability_and_performance/recommended-host-practices.html#etcd-defrag[Defragmenting `etcd` data].
+. Defragment the `etcd` database and clear any `NOSPACE` alarms as outlined in link:https://access.redhat.com/documentation/en-us/openshift_container_platform/4.14/html/scalability_and_performance/recommended-performance-and-scalability-practices#etcd-defrag_recommended-etcd-practices[Defragmenting `etcd` data].
