--- a/gitops/gitops_registering.adoc
+++ b/gitops/gitops_registering.adoc
@@ -15,8 +15,6 @@ To configure GitOps with the Push model, you can register a set of one or more {
 
 Complete the following steps to register managed clusters to GitOps:
 
-. Create managed cluster sets and add managed clusters to those managed cluster sets. See the example for managed cluster sets in the link:https://github.com/stolostron/multicloud-integrations/blob/main/examples/openshift-gitops/managedclusterset.yaml[`multicloud-integrations managedclusterset`].
-
 +
 See the link:../clusters/cluster_lifecycle/create_clusterset.adoc#creating-a-managedclusterset[Creating a _ManagedClusterSet_] documentation for more information.
 
@@ -87,7 +85,7 @@ rules:
 //OF | fix first link | Aug 28 23
 - Refer to xref:../applications/gitops_config.adoc#tolerations-config[Configuring placement tolerations for {product-title-short} and OpenShift GitOps] for more details.
 
-- See the link:https://github.com/open-cluster-management/multicloud-integrations/blob/main/examples/managedclusterset.yaml[`multicloud-integrations` managed cluster set] example.
+- See the link:https://github.com/stolostron/multicloud-integrations/blob/main/examples/managedclustersetbinding.yaml[`multicloud-integrations` managed cluster set binding] example.
 
 - Refer to link:../clusters/cluster_lifecycle/create_clusterset.adoc#creating-a-managedclusterset[Creating a _ManagedClusterSet_] 
 
