--- a/governance/iam_policy_ctrl.adoc
+++ b/governance/iam_policy_ctrl.adoc
@@ -77,4 +77,4 @@ Enter `inform`. The IAM policy controller only supports the `inform` feature.
 [#iam-policy-sample]
 == IAM policy sample
 
-See link:https://github.com/open-cluster-management/policy-collection/blob/main/stable/AC-Access-Control/policy-limitclusteradmin.yaml[`policy-limitclusteradmin.yaml`] to view the IAM policy sample. See xref:../governance/create_policy.adoc#managing-security-policies[Managing security policies] for more information. Refer to xref:../governance/policy_controllers.adoc#policy-controllers[Policy controllers] for more topics.
+See xref:../governance/create_policy.adoc#managing-security-policies[Managing security policies] for more information. Refer to xref:../governance/policy_controllers.adoc#policy-controllers[Policy controllers] for more topics.
