--- a/access_control/rbac.adoc
+++ b/access_control/rbac.adoc
@@ -1,7 +1,7 @@
 [#rbac-rhacm]
 = Role-based access control
 
-{product-title} supports role-based access control (RBAC). Your role determines the actions that you can perform. RBAC is based on the authorization mechanisms in Kubernetes, similar to {ocp}. For more information about RBAC, see the OpenShift _RBAC_ overview in the link:https://access.redhat.com/documentation/en-us/openshift_container_platform/4.13/authentication_and_authorization/using-rbac.html[{ocp-short} documentation].
+{product-title} supports role-based access control (RBAC). Your role determines the actions that you can perform. RBAC is based on the authorization mechanisms in Kubernetes, similar to {ocp}. For more information about RBAC, see the OpenShift _RBAC_ overview in the link:https://access.redhat.com/documentation/en-us/openshift_container_platform/4.13/html/authentication_and_authorization/using-rbac[{ocp-short} documentation].
 
 *Note:* Action buttons are disabled from the console if the user-role access is impermissible.
 
