--- a/gitops/gitops_registering.adoc
+++ b/gitops/gitops_registering.adoc
@@ -82,8 +82,8 @@ rules:
 
 [#additional-resources-gitops]
 == Additional resources
-//OF | fix first link | Aug 28 23
-- Refer to xref:../applications/gitops_config.adoc#tolerations-config[Configuring placement tolerations for {product-title-short} and OpenShift GitOps] for more details.
+
+- Refer to xref:../gitops/gitops_tolerations_config.adoc#tolerations-config[Configuring application placement tolerations for GitOps] for more details.
 
 - See the link:https://github.com/stolostron/multicloud-integrations/blob/main/examples/managedclustersetbinding.yaml[`multicloud-integrations` managed cluster set binding] example.
 
